--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
 
 <body>
     <div class="content">
-        <h2 id="msg">Hello</h2>
+        <h2 id="msg">Hello Love in the air </h2>
     </div>
 
 
-
+<div class="format">
     <p>If it does work with this partner, please try another,
          Love is a game of luck.</p>
          <h3>The best lover is Jesus Chirst.</h3>
+        </div>
     <script src="App.js"></script>
 </body>
 
